# vietnam-coffee-brands-analysis

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.py  socket.yml
.cursor/rules/: python.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.idx/: dev.nix
configs/: config.yaml  configs.yaml  db_config.yaml  paths.yaml
configs/api/: default.yaml
configs/data/: default.yaml
configs/db/: default.yaml  huggingface.yaml  kaggle.yaml  postgres.yaml
configs/evaluation/: default.yaml
configs/evaluations/: metrics.yaml
configs/features/: default.yaml
configs/logging/: logger.yaml
configs/models/: default.yaml  random_forest.yaml  xgboost.yaml
configs/tests/: default.yaml
configs/training/: default.yaml
notebooks/: 01-notebook.ipynb
notebooks/00_setup/: 01_configure_environment.ipynb
notebooks/01_collection/: 01_merge_datasets.ipynb
notebooks/01_exploration/: 01_data_overview.ipynb  04_correlation_heatmap.ipynb  05_statistical_tests.ipynb  06_domain_insights.ipynb
notebooks/02_exploration/: 01_data_overview.ipynb  02_missing_outliers_analysis.ipynb  03_statistical_summary.ipynb  04_analyze_correlation.ipynb
notebooks/02_preprocessing/: 01_data_cleaning.ipynb  02_data_integration.ipynb  02_data_normalization.ipynb  03_data_transformation.ipynb  03_feature_encoding.ipynb  04_data_reduction.ipynb  04_data_split_train_test.ipynb  05_data_split_train_test.ipynb
notebooks/03_exploration/: 01_data_overview.ipynb  02_missing_outliers_analysis.ipynb  03_descriptive_statistics.ipynb  03_statistical_analysis.ipynb  03_statistical_summary.ipynb  04_analyze_correlation.ipynb  04_correlation_analysis.ipynb  05_inferential_statistics.ipynb  05_statistical_tests.ipynb  06_domain_insights.ipynb  06_feature_engineering.ipynb
notebooks/03_modeling/: 01_baseline_model.ipynb
notebooks/04_evaluation/: 01_cross_validation.ipynb  02_confusion_matrix.ipynb  03_error_analysis.ipynb  04_model_comparison.ipynb
notebooks/04_feature_engineering/: 01_feature_creation.ipynb  02_feature_transformation.ipynb  03_feature_extraction.ipynb  04_feature_selection.ipynb  (+1 more)
(+68 files in other folders)
