[project]

name = "vietnam-coffee-analysis"
version = "0.1.0"
description = "Data science project analyzing Vietnam coffee shop market"
authors = [{name = "Nguyen Duc Gia Bao"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

# Dependencies
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "requests",
]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | notebooks
  | __pycache__
)/
'''

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E203", "E501"]
exclude = ["venv", "build", "dist"]