[project]

name = "vietnam-coffee-brands-analysis"
version = "0.1.0"
description = "Data science project analyzing Vietnam coffee shop market"
authors = [{name = "Nguyen Duc Gia Bao"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

# Dependencies
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "requests",
]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | notebooks
  | __pycache__
)/
'''

[tool.isort]
atomic = true
indent = "  "
profile = "black"
line_length = 88
force_grid_wrap = 0
multi_line_output = 3
skip_gitignore = true
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I001"]
ignore = ["E203", "E501"]
exclude = ["venv", "build", "dist", "__pycache__", "data"]

